--- a/public/scss/layout/_extends.scss
+++ b/public/scss/layout/_extends.scss
@@ -1,6 +1,6 @@
 /*_extends.scss*/
 
-/**** PLACEHOLDER SELECTORS
+/**** BASE LAYOUT EXTENSTION PLACEHOLDER SELECTORS
 *=======================================================================*/
 %panel-default {
   padding-top: rem(30px);
