--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -23,6 +23,9 @@
 /*===== Import images =====*/
 @import "img";
 
+/*===== Import layers =====*/
+@import "layers";
+
 /*===== Import menu =====*/
 @import "menu";
 
@@ -31,6 +34,9 @@
 
 /*===== Import navigation bar =====*/
 @import "navbar";
+
+/*===== Import paragraphs =====*/
+@import "paragraphs";
 
 /*===== Import sad browser =====*/
 @import "sad_browser";
