--- a/public/scss/utilities/_helpers.scss
+++ b/public/scss/utilities/_helpers.scss
@@ -35,7 +35,7 @@
   position: absolute;
 }
 
-/*===== Center elements placeholder =====*/
+/*===== Center elements helper =====*/
 .centered {
   float: none;
   margin-right: auto;
