--- a/public/scss/modules/_img.scss
+++ b/public/scss/modules/_img.scss
@@ -3,10 +3,13 @@
 /**** IMAGES
 *=======================================================================*/
 .img {
+
   @include m(wrap) {
-    border: 1px solid palette(grey, x-light);
-    padding: rem(12px);
+    border: 1px solid palette(grey, base);
+    background-color: palette(grey, light);
+    padding: rem(2px);
   }
+
   @include m(avatar) {
     display: block;
     border-radius: $br--round;
@@ -14,9 +17,11 @@
     margin-right: auto;
     margin-left: auto;
   }
+
   @include m(hero) {
     @media (min-width: 769px) {
       margin-bottom: rem(42px);
     }
   }
+
 }
