--- a/public/css/main.css
+++ b/public/css/main.css
@@ -433,12 +433,12 @@ td, th {
 body {
   color: #797E83;
   font-size: 16px;
-  font-family: "Hoefler Text", Baskerville, "Baskerville Old Face", Prata, Garamond, "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
+  font-family: Garamond, Baskerville, Prata "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
   line-height: 1.5; }
 
 /*===== Text style =====*/
 h3 {
-  font-family: Baskerville, Garamond, Prata, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif; }
+  font-family: "Hoefler Text", Baskerville, Garamond, Prata, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif; }
 
 h4 {
   margin-top: 1.57143rem;
@@ -717,18 +717,18 @@ footer {
 /*===== Headlines =====*/
 h1, .headline-primary, .headline-primary--grouped {
   color: #525559;
-  font-family: "Hoefler Text", Baskerville, "Baskerville Old Face", Prata, Garamond, "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
+  font-family: Garamond, Baskerville, Prata "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
   font-weight: 600;
-  font-size: 2.625rem;
+  font-size: 3.25rem;
   line-height: 1.09524;
   margin-top: 0; }
 
 h2, .headline-secondary, .headline-secondary--grouped {
   color: #FFFFFF;
   letter-spacing: 1px;
-  font-family: Baskerville, Prata, Garamond, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
+  font-family: Baskerville, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
   font-weight: 100;
-  font-size: 1.625rem; }
+  font-size: 1.75rem; }
 
 h3, .headline-tertiary, .headline-tertiary--grouped {
   color: #FFFFFF;
