--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -59,7 +59,7 @@ blockquote {
 
 /*===== Links style =====*/
 a {
-  color: palette(grey, dark);
+  color: palette(white, base);
   text-decoration: none;
   font-weight: $font-weight--medium;
 }
