--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -5,6 +5,9 @@
 /*===== Import buttons =====*/
 @import "buttons";
 
+/*===== Import case =====*/
+@import "case";
+
 /*===== Import design tests =====*/
 @import "design_tests";
 
