--- a/public/scss/modules/_nav.scss
+++ b/public/scss/modules/_nav.scss
@@ -10,7 +10,7 @@
     @extend %nav-item-horz;
     a {
       @extend %nav-item-link;
-      color: palette(grey);
+      color: palette(white);
       &:hover {
         @extend %nav-item-on;
       }
