--- a/public/scss/modules/_extends.scss
+++ b/public/scss/modules/_extends.scss
@@ -23,7 +23,7 @@
 
 /*===== Headlines =====*/
 %hdln-prim {
-  color: palette(grey, xx-light);
+  color: palette(white, base);
   font-family: $font-family--primary;
   font-weight: $font-weight--demi-bold;
   font-size: rem(52px);
